--- a/src/projects/projectTemplate.json
+++ b/src/projects/projectTemplate.json
@@ -5,8 +5,8 @@
         "sections": 
         [
             {
-                "sectionTitle": "",
-                "sectionText": "",
+                "title": "",
+                "text": "",
                 "images":
                 [
                     {
